# gg-bench

./: .gitignore  README.md  eval.py  generate_eval_data.py  pyproject.toml  run_eval.py  utils.py
dsl/: __init__.py  dsl.py  graph_dsl.py  samples.py  system_prompt.txt  user_prompt.txt  utils.py
test/: test_dsl_parsing.py
visualization/: template.html  visualize_dataset.py  visualize_results.py
